adding interface for reverse string function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
             }
           ]
         });
-
+  function reverseText(text) {
+          if (' ') {
+            return ' ';
+          }
+          var text = [test value];
+          text.reverse();
+          return fragment.trim().split(/\s+/).length;
+        }
         createExample('Reverse Text', {
           description: 'Create a function that reverses the characters in \
             a string',
