Called reverseText function in implementation

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             return null; 
         }
         // Make an empty string
-          var reversed = ' ';
+          var reversed = '';
         // Loop backward over text
           for (var index = text.length - 1; index >=0; index--) {
         // Append character to new text
@@ -57,7 +57,7 @@
         createExample('Reverse Text', {
           description: 'Create a function that reverses the characters in \
             a string',
-          implementation: null,
+          implementation: reverseText,
           validation: [
             {
               input: 'test value',
