Added 'if' statements to function at each bill denomintation
added modifier to bills variable

--- a/index.html
+++ b/index.html
@@ -94,18 +94,25 @@
           if (amount>0){
             bills = Math.floor(amount);
             coins = Math.floor((amount - bills) % 1*100);
-            change.twenties = Math.floor (bills/20);
-            change.tens = Math.floor ((bills - (change.twenties * 20))/10);
-            change.fives = Math.floor ((bills - ((change.twenties * 20) - (change.tens * 10)))/5);
+            if (bills>=20){
+				change.twenties = Math.floor (bills/20);
+				bills -= 20*change.twenties;
+			}
+            if (bills>=10){
+				change.tens = Math.floor (bills/10);
+				bills -= 10*change.tens;
+			}
+            if (bills>=5){
+				change.fives = Math.floor (bills/5);
+				bills -= 5*change.fives;
+			}
             change.ones = bills % 5;
             change.quarters = Math.floor (coins/25);
             change.dimes = Math.floor ((coins - (change.quarters* 25))/10);
-            change.nickels = Math.floor ((coins - ((change.quarters * 25)-(change.dimes * 10)))/5);
+            change.nickels = Math.floor ((coins - ((change.quarters * 25)+(change.dimes * 10)))/5);
             change.pennies = coins % 5;
           }
           return change;
-			//if change.twenties = 0 {
-				//return ''};
         };  
         
         createExample('Tender Change', {
