removed floating tender change function and added close curly brackets at end of html

--- a/index.html
+++ b/index.html
@@ -73,11 +73,8 @@
             }
           ]
         });
-
-        // Transforms floating decimal number value to standard currency denominations
-        function tenderChange (amount) {
-        // set up output variable
-          
+				
+        // create object array to use in dynamic equation   
 					var denominations = {
   					twenties: 2000,
   					tens: 1000,
@@ -210,8 +207,7 @@
             sorted by year.",
           implementation: null
         });
-			}
+			});
     </script>
-
   </body>
 </html>
