--- a/index.html
+++ b/index.html
@@ -155,32 +155,47 @@
           validation: [
                         {
                           input: 7.23,
-                          output: { twenties: 0, tens: 0, fives: 1, ones: 2, quarters: 0, dimes: 2, nickels: 0, pennies: 3 }
+                          output: { fives: 1, ones: 2, dimes: 2, pennies: 3 }
                         },
                         {
                           input: 148.86,
-                          output: { twenties: 7, tens: 0, fives: 1, ones: 3, quarters: 3, dimes: 1, nickels: 0, pennies: 1}
+                          output: { twenties: 7, fives: 1, ones: 3, quarters: 3, dimes: 1, pennies: 1}
                         }                      
                       ]
         });
+	
+				//create object for noun and quantity
+				var numberOfThings = [noun,0]
+				// make separate variables for object key and object value to return
+				var thing = numberOfThings[0]
+				var quantity = numberOfThings[1]
+				//add function to add 's' concatination to thing if quantity !== 1
+				function pluralize(thing){
+				if (quantity !== 1) {
+				thing = thing + 's'
+				}
+				};
+				//return quantity of things
+				return quantity + ' ' +thing
 
         createExample('The Pluralizer', {
           description: 'Write a function that takes two arguments, a noun \
             and a number, and returns the number and the noun in pluralized \
             form (for instance, "1 dog", "5 cats")',
-          implementation: null,
+          implementation: pluralize,
           validation: [
-            {
-              input: ['dog', 1],
+           /*
+						{
+              input: ['dog',1]
               output: '1 dog'
             },
             {
-              input: ['cat', 5],
+              input: ['cat',5]
               output: '5 cats'
             }
+						*/
           ]
         });
-
         var movieList = [
 					{movie:'The Shawshank Redemption', year:1994, votes:1043071},
 					{movie:'The Godfather', year:1972, votes:732416},
@@ -195,8 +210,10 @@
         ];
 					
 					function movieParsing (movieList) {
-					movieList[year].sort()
-					};
+					//sort list by year
+						movieList[year].sort();
+						return movieList
+					}
 
         createExample('Movie Parsing', {
           description: "Given the following comma separated list of IMDb top \
